--- a/package.json
+++ b/package.json
@@ -9,28 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
-    "@mui/x-data-grid": "^8.1.0",
-    "@mui/x-date-pickers": "^8.1.0",
-    "@types/react-datepicker": "^7.0.0",
-    "date-fns": "^4.1.0",
-    "next": "15.3.1",
-    "papaparse": "^5.5.2",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.4",
+    "date-fns": "^3.3.1",
+    "next": "14.1.0",
+    "papaparse": "^5.4.1",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "@types/node": "^20",
-    "@types/papaparse": "^5.3.15",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "typescript": "^5"
   }
 }
